--- a/README
+++ b/README
@@ -1,4 +1,18 @@
+To run the Clicker Quiz Manager, double-click on the 'runrpi' file. If you're
+running Windows, you can first rename it to 'runrpi.py' so that the Python
+interpreter will run it for you.
+
+Before first run, you need to create a database file; you can do this by
+running 'create_database.py' in the db/tools directory, then moving the file
+whereever you like. On running the program, you'll be asked to select the file.
+
+For more information, look at the user manual in the docs/ directory.
+
 Dependencies:
-- PyRTF (in the thirdparty/ directory)
-- pyuic4 (for building)
+- Python 2.7
+- PyQt 4
 - sqlite3
+- PyRTF (in the thirdparty/ directory)
+- rtfunicode (in the thirdparty/ directory)
+
+- pyuic4 (for development, to run ./build_ui.sh)
