--- a/README
+++ b/README
@@ -1,12 +1,14 @@
-To run the Clicker Quiz Manager, double-click on the 'runrpi' file. If you're
-running Windows, you can first rename it to 'runrpi.py' so that the Python
+To run the Clicker Quiz Manager, double-click on the 'runcqm' file. If you're
+running Windows, you can first rename it to 'runcqm.py' so that the Python
 interpreter will run it for you.
 
 Before first run, you need to create a database file; you can do this by
 running 'create_database.py' in the db/tools directory, then moving the file
-whereever you like. On running the program, you'll be asked to select the file.
+whereever you like. On running the program, you'll be asked to select a
+database file.
 
-For more information, look at the user manual in the docs/ directory.
+For more information on using Clicker Quiz Manager, look at the user manual in
+the docs/ directory.
 
 Dependencies:
 - Python 2.7
