latex_munge function
Also learned that you're always supposed to load fontspec and xunicode
in XeTeX documents, so I went ahead and did that in my default preamble.
Didn't fix the spacing problem...

--- a/db/resources/latex_header_default.tex
+++ b/db/resources/latex_header_default.tex
@@ -2,6 +2,9 @@
 % (pdflatex will give wrong spacing & bad ligatures)
 
 \documentclass[12pt]{article}
+\usepackage{fontspec}
+\usepackage{xunicode}
+
 \usepackage[left=1in, right=1in, top=0.5in, bottom=0.5in]{geometry}
 \usepackage{setspace}
 \usepackage{titlesec}
