--- a/tests/resources/test_latex_against.tex
+++ b/tests/resources/test_latex_against.tex
@@ -2,6 +2,9 @@
 % (pdflatex will give wrong spacing & bad ligatures)
 
 \documentclass[12pt]{article}
+\usepackage{fontspec}
+\usepackage{xunicode}
+
 \usepackage[left=1in, right=1in, top=0.5in, bottom=0.5in]{geometry}
 \usepackage{setspace}
 \usepackage{titlesec}
